; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Command.c_GetProxyTypeStr.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Command.c_GetProxyTypeStr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"PROTO_DIRECT_TCP\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"PROTO_HTTP_PROXY\00", align 1
@.str.2 = private unnamed_addr constant [18 x i8] c"PROTO_SOCKS_PROXY\00", align 1
@.str.3 = private unnamed_addr constant [14 x i8] c"PROTO_UNKNOWN\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GetProxyTypeStr(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %11 [
    i32 130, label %5
    i32 129, label %7
    i32 128, label %9
  ]

5:                                                ; preds = %1
  %6 = call i32* @_UU(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %2, align 8
  br label %13

7:                                                ; preds = %1
  %8 = call i32* @_UU(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  store i32* %8, i32** %2, align 8
  br label %13

9:                                                ; preds = %1
  %10 = call i32* @_UU(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  store i32* %10, i32** %2, align 8
  br label %13

11:                                               ; preds = %1
  %12 = call i32* @_UU(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  store i32* %12, i32** %2, align 8
  br label %13

13:                                               ; preds = %11, %9, %7, %5
  %14 = load i32*, i32** %2, align 8
  ret i32* %14
}

declare dso_local i32* @_UU(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
